[tool.poetry]
name = "it_jobs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
sqlmodel = "^0.0.4"
python-dotenv = "^0.19.2"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
flake8 = "^3.9.2"
black = {version = "^21.5-beta.1", python = "^3.7"}
autoflake = "^1.4"
isort = "^5.9.3"

[tool.isort]
profile = "black"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
