[tool.poetry]
name = "it_jobs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
sqlmodel = ">=0.0.6"
python-dotenv = "^1.0.0"
SQLAlchemy = ">=1.4.35"

[tool.poetry.dev-dependencies]
mypy = "^1.4.0"
flake8 = "^6.1.0"
black = {version = "^23.7", python = "^3.10"}
autoflake = "^2.2"
isort = "^5.9.3"

[tool.isort]
profile = "black"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
